@@ -19,6 +19,8 @@ package com.sun.enterprise.security.jauth;
 
 import java.io.IOException;
 import java.lang.reflect.Method;
+import java.security.AccessController;
+import java.security.PrivilegedExceptionAction;
 import java.util.Map;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -29,8 +31,10 @@ import javax.security.auth.callback.CallbackHandler;
 import javax.security.auth.callback.UnsupportedCallbackException;
 import javax.security.auth.login.AppConfigurationEntry;
 
-import com.sun.enterprise.security.jmac.config.ConfigParser;
-import com.sun.enterprise.security.jmac.config.GFServerConfigProvider;
+import org.glassfish.epicyro.config.factory.ConfigParser;
+import org.glassfish.epicyro.data.AuthModuleConfig;
+import org.glassfish.epicyro.data.AuthModulesLayerConfig;
+
 import com.sun.logging.LogDomains;
 
 /**
@@ -54,9 +58,9 @@ class ConfigFile extends AuthConfig {
     static final String CLIENT = "client";
     static final String SERVER = "server";
 
-    private static final String DEFAULT_HANDLER_CLASS = "com.sun.enterprise.security.jmac.callback.ContainerCallbackHandler";
+    private static final String DEFAULT_HANDLER_CLASS = "com.sun.enterprise.security.jmac.ContainerCallbackHandler";
 
-    private static final String DEFAULT_PARSER_CLASS = "com.sun.enterprise.security.jmac.config.ConfigDomainParser";
+    private static final String DEFAULT_PARSER_CLASS = "com.sun.enterprise.security.jmac.ConfigDomainParser";
 
     private static final Logger logger = LogDomains.getLogger(ConfigFile.class, LogDomains.SECURITY_LOGGER);
 
@@ -152,7 +156,7 @@ class ConfigFile extends AuthConfig {
         Map configMap;
 
         synchronized (parser) {
-            configMap = parser.getConfigMap();
+            configMap = parser.getAuthModuleLayers();
         }
 
         if (configMap == null) {
@@ -161,8 +165,8 @@ class ConfigFile extends AuthConfig {
 
         // get the module config info for this intercept
 
-        GFServerConfigProvider.InterceptEntry intEntry = (GFServerConfigProvider.InterceptEntry) configMap.get(intercept);
-        if (intEntry == null || intEntry.getIdMap() == null) {
+        AuthModulesLayerConfig intEntry = (AuthModulesLayerConfig) configMap.get(intercept);
+        if (intEntry == null || intEntry.getAuthModules() == null) {
             if (logger != null && logger.isLoggable(Level.FINE)) {
                 logger.fine("module config has no IDs configured for [" + intercept + "]");
             }
@@ -171,8 +175,8 @@ class ConfigFile extends AuthConfig {
 
         // look up the DD's provider ID in the module config
 
-        GFServerConfigProvider.IDEntry idEntry = null;
-        if (id == null || (idEntry = (GFServerConfigProvider.IDEntry) intEntry.getIdMap().get(id)) == null) {
+        AuthModuleConfig idEntry = null;
+        if (id == null || (idEntry = intEntry.getAuthModules().get(id)) == null) {
 
             // either the DD did not specify a provider ID,
             // or the DD-specified provider ID was not found
@@ -187,12 +191,12 @@ class ConfigFile extends AuthConfig {
 
             String defaultID;
             if (CLIENT.equals(type)) {
-                defaultID = intEntry.getDefaultClientID();
+                defaultID = intEntry.getDefaultClientModuleId();
             } else {
-                defaultID = intEntry.getDefaultServerID();
+                defaultID = intEntry.getDefaultServerModuleId();
             }
 
-            idEntry = (GFServerConfigProvider.IDEntry) intEntry.getIdMap().get(defaultID);
+            idEntry = intEntry.getAuthModules().get(defaultID);
             if (idEntry == null) {
 
                 // did not find a default provider ID
@@ -200,6 +204,7 @@ class ConfigFile extends AuthConfig {
                 if (logger != null && logger.isLoggable(Level.FINE)) {
                     logger.fine("no default config ID for [" + intercept + "]");
                 }
+
                 return null;
             }
         }
@@ -269,13 +274,10 @@ class ConfigFile extends AuthConfig {
             final String finalClassName = className;
             final ClassLoader finalLoader = AuthConfig.getClassLoader();
 
-            return (ConfigParser) java.security.AccessController.doPrivileged(new java.security.PrivilegedExceptionAction() {
-                @Override
-                public Object run() throws Exception {
-                    Class c = Class.forName(finalClassName, true, finalLoader);
-                    return c.newInstance();
-                }
-            });
+            PrivilegedExceptionAction<ConfigParser> action = () -> (ConfigParser) Class.forName(finalClassName, true, finalLoader).getDeclaredConstructor().newInstance();
+
+            return AccessController.doPrivileged(action);
+
         } catch (java.security.PrivilegedActionException pae) {
             IOException iex = new IOException(pae.getException().toString());
             iex.initCause(pae.getException());
@@ -293,7 +295,7 @@ class ConfigFile extends AuthConfig {
 
             final ClassLoader finalLoader = AuthConfig.getClassLoader();
 
-            return (CallbackHandler) java.security.AccessController.doPrivileged(new java.security.PrivilegedExceptionAction() {
+            return (CallbackHandler) AccessController.doPrivileged(new PrivilegedExceptionAction() {
                 @Override
                 public Object run() throws Exception {
 
@@ -355,7 +357,7 @@ class ConfigFile extends AuthConfig {
      * This class also provides a way for a caller to obtain an instance of the module listed in the entry by invoking the
      * <code>newInstance</code> method.
      */
-    static class Entry extends javax.security.auth.login.AppConfigurationEntry {
+    static class Entry extends AppConfigurationEntry {
 
         // for loading modules
         private static final Class[] PARAMS = {};
